# tirad

./: .env.example  .gitignore  AGENT.md  GEMINI.md  INTELLIGENCE.md  README.md  backtest_24months.py  backtest_compounding.py  backtest_enhanced.py  backtest_forex.py  backtest_meta_maximizer.py  backtest_predator.py  backtest_ultimate.py  bot_abductive_sniper.py  bot_binance_sniper.py  bot_blood.py  bot_prop_eval.py  bot_prop_funded.py  deploy_blood.py  format_table.py  live_scan.py  paper_ledger.json  paper_trader.py  patch.py  requirements.txt  run_abductive_tests.py  run_blood_live.sh  run_engine.py  scheduler.py  setup.sh  start_bot.sh  ultimate_backtest_data.json  ultimate_backtest_table.md  ultimate_prop_bot.py  ultimate_state.json
quantlab/: .gitignore  CLAUDE.md  pyproject.toml
quantlab/config/: default.yaml  perp.yaml  twosleeve.yaml
quantlab/quantlab/: config.py  indicators.py  orchestrator.py
quantlab/scripts/: build_feature_panel.py  feature_lab.py  ml4t_train.py  orderflow_workflow.js  run_8month_report.py  run_bakeoff.py  run_baseline.py  run_book.py  run_bookopt.py  run_bookpbo.py  run_botopt.py  run_carry.py  run_carry_robust.py  run_combo.py  run_compound_engine.py  run_conviction_gate.py  run_equity_prop_stats.py  run_expanded.py  run_farm_backtest.py  run_fib.py  run_firm_compare.py  run_firm_montecarlo.py  run_fpips_book.py  run_funded_survival.py  run_funding_flip.py  run_fundingpips.py  run_futures.py  run_fx_carry_opt.py  run_fx_carry_stats.py  run_fxedge.py  run_fxmr_validate.py  run_gated.py  run_hhll.py  run_levers.py  run_metalabel.py  (+32 more)
(+684 files in other folders)
