[project]
name = "quantlab"
version = "0.0.0"
description = "Multi-agent crypto trend research system — OOS-first, honest backtests."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyyaml>=6",
    "pyarrow>=15",
    "ccxt>=4.2",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.4", "lightgbm>=4.3"]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["quantlab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
